Shipment List Performance Optimizations